# lodkit

./: .gitignore  404.html  CHANGELOG.md  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: gitlint.yaml  tests.yaml
docs/: reference.md
lodkit/: __init__.py  connections.py  graph.py  importer.py  lod_types.py  plugins.py  rdf_importer.py  rdfimport.py  reasoners.py  types.py  utils.py
lodkit/namespace_tools/: _exceptions.py  _messages.py  namespace_graph.py  ontology_namespace.py  ontology_namespaces.py  utils.py
lodkit/testing_tools/: graph_format_options.py  strategies.py  xsd_type_strategy_mapping.py
lodkit/triple_tools/: triple_chain.py  ttl.py  ttl_constructor.py  utils.py
lodkit/uri_tools/: uri_constructor.py  uribase.py  uriclass.py  utils.py
reference/: index.html
tests/: test_graph.py  test_lod_types.py  test_rdf_importer.py  test_rdfimporter.py  test_test_utils.py
tests/data/: fail_triples.py
tests/data/fails/fail_imports/: fail_badsyntax.ttl  fail_text.txt
tests/data/graphs/fail_ontologies/delimiter_fails/: no_delimiter.ttl  no_delimiter_no_declaration.ttl
tests/data/graphs/fail_ontologies/header_fails/: multiple_headers.ttl  no_header_cidoc.ttl
tests/data/graphs/ontologies/: CLSCorDataModel.ttl
tests/data/side_effects/warning_imports/: notrdf.json
tests/graphs/: rdftest_xml.xml
tests/test_namespace_tools/: test_closed_ontology_namespace.py  test_defined_ontology_namespace.py  test_namespacegraph.py  test_ontology_namespaces.py
tests/test_rdf_importer/: test_basic_importer.py
tests/test_testing_tools/: test_graph_format_options.py  test_strategies.py
tests/test_triple_tools/: _ttl_strategies.py  test_basic_ttl.py  test_ttl_happy.py  test_ttl_sad.py  test_ttl_skip_if_happy.py  test_ttl_skip_if_sad.py
tests/test_uri_tools/: test_uribase.py  test_uriclass.py  test_utils.py
tests/utils/: fixtures.py  paths.py  utils.py
tests/utils/strategies/: __init__.py  ns_strategies.py  ttl_strategies.py
tutorials/: index.html
