[tool.poetry]
name = "lodkit"
version = "0.1.13"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reasonable = "^0.2.2"
owlrl = "^6.0.2"
agraph-python = "^102.0.0"
loguru = "^0.7.2"
rdflib = "^7.0.0"
hypothesis = "^6.103.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
typeguard = "^4.3.0"
pytest-loguru = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
	"--strict-markers",
	"--strict-config",
	"-ra"
]

testpaths = "tests"

markers = [
	"remote: Indicate tests against actual remote sources.",
	"slow: Indicate tests which are known to be slow."
]